--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "form",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "http://MohdBelalNaim.github.io/fastpass",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
