Updated router to hashrouter

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "form",
   "version": "0.1.0",
   "private": false,
-  "homepage": "http://MohdBelalNaim.github.io/fastpass",
+  "homepage": "http://MohdBelalNaim.github.io/fastpass/#",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
